crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__active_tab_second.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh  ·  nvim  ·  htop                                                                                              +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
