crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__deeply_nested.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮╭──────────────────────────────────────────────────────────╮
│  editor                                               +  ││  build                                                +  │
│ ──────────────────────────────────────────────────────── ││ ──────────────────────────────────────────────────────── │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │╰──────────────────────────────────────────────────────────╯
│                                                          │╭────────────────────────────╮╭────────────────────────────╮
│                                                          ││  logs                   +  ││  tests                  +  │
│                                                          ││ ────────────────────────── ││ ────────────────────────── │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
│                                                          ││                            ││                            │
╰──────────────────────────────────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯
 ( ␣ ) leader · ( : ) commands · ( n ) new tab · ( s/v ) split · ( q ) quit
