crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__floating_window_overlay.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────│╭──────────────────────────────────────────────────────────╮
│  editor                                               +  ││  tests                                                +  │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                             ╭──────────────────────────────────────╮                                                 │
│                             │  floating                         +  │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             │                                      │                                                 │
│                             ╰──────────────────────────────────────╯                                                 │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────│╰──────────────────────────────────────────────────────────╯
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
