crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__interact_mode_border.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────────────────────────────────────────╮
┃  editor                                               +  ┃│  tests                                                +  │
┃ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ┃│ ──────────────────────────────────────────────────────── │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────────────────────────────────────────╯
  ^␣  normal ·  ␣  leader ·  :  commands
