crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__many_tabs.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh  ·  nvim  ·  htop  ·  cargo  ·  git  ·  docker  ·  npm  ·  python                                              +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
