crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__unequal_ratio.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  sidebar                        + │  main                                                                           +
 ──────────────────────────────────│ ──────────────────────────────────────────────────────────────────────────────────
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
                                   │
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
