crates/pane-tui/src/ui/snapshots/pane__ui__tests_window_view__zoomed_window.snap
---
source: crates/pane-tui/src/ui/tests_window_view.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  editor                                                                                                             +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
